# nc-de-totesys-solo

./: .gitignore  README.md  pyproject.toml
scripts/: layer_hashes.sh  make_layer_zip.sh
src/: load_lambda.py
src/transform_lambda/: dataframes.py  transform_lambda.py
terraform/: iam.tf  lambda.tf  main.tf  outputs.tf
tests/: test_dataframes.py  test_load_lambda.py  test_transform_lambda.py
