[project]
name = "nc-de-totesys-solo"
# Until versioning is decided, keep as 0.0.0 for now
version = "0.0.0"
description = "Totesys ETL pipeline"
requires-python = "~=3.13.0"

dependencies = [
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pg8000>=1.31.5",
    "sqlalchemy>=2.0.50     ",
    "azure-storage-blob>=12.30.0",
    "azure-functions>=2.1.0",
    "python-dotenv>=1.2.2"
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    # Keep these for now until project progresses past the need for them
    "boto3>=1.43.26",
    "moto[s3]>=5.2.2",
    "beautifulsoup4>=4.15.0",
    "requests>=2.34.2",
]
# Lambda layer contents, built by scripts/make_layer_zip.sh.
# boto3/botocore are omitted because the Lambda runtime bundles them.
lambda-layer-01 = [
    "pg8000>=1.31.5",
]
lambda-layer-02 = [
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pg8000>=1.31.5",
    "sqlalchemy>=2.0.50",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = true
